# decmed

api-req/iota/: IOTA.postman_collection.json  bruno.json  faucet funding.bru
client/client-hospital-tauri/: .gitignore  .prettierrc  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
client/client-hospital-tauri/src/: app.css
client/client-hospital-tauri/src-tauri/: Cargo.toml  tauri.conf.json
client/client-hospital-tauri/src-tauri/capabilities/: default.json
client/client-hospital-tauri/src-tauri/src/: activation.rs  admin.rs  administrative_personnel.rs  constants.rs  hospital_error.rs  lib.rs  main.rs  medical_personnel.rs  move_call.rs  shared_cmds.rs  signin.rs  signout.rs  signup.rs  types.rs  utils.rs
client/client-hospital-tauri/src/lib/: constants.ts  interfaces.ts  schema.ts  types.ts  utils.ts
client/client-hospital-tauri/src/lib/components/: dialog.svelte  error.svelte
client/client-hospital-tauri/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
client/client-hospital-tauri/src/routes/(auth)/: +layout.svelte
client/client-hospital-tauri/src/routes/(auth)/activation/: +page.svelte  +page.ts  schema.ts
client/client-hospital-tauri/src/routes/(auth)/complete-profile/: +page.svelte  +page.ts  admin-state.svelte.ts  admin.svelte  personnel-state.svelte.ts  personnel.svelte  state.svelte.ts
client/client-hospital-tauri/src/routes/(auth)/pin/: +page.svelte  +page.ts
client/client-hospital-tauri/src/routes/(auth)/signin/: +page.svelte  +page.ts  state.svelte.ts
client/client-hospital-tauri/src/routes/(auth)/signup/: +page.svelte  +page.ts  state.svelte.ts
client/client-hospital-tauri/src/routes/(context)/: auth-context.svelte.ts
client/client-hospital-tauri/src/routes/dashboard/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  admin-state.svelte.ts  administrative-state.svelte.ts  home-admin.svelte  home-administrative.svelte  home-medical.svelte  medical-state.svelte.ts
client/client-hospital-tauri/src/routes/dashboard/adm/: +page.ts
client/client-hospital-tauri/src/routes/dashboard/emr/: state.svelte.ts
client/client-hospital-tauri/src/routes/dashboard/profile/: +page.svelte  +page.ts  profile-state.svelte.ts
client/client-ministry/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
client/client-ministry/src/: app.css
client/client-ministry/src-tauri/: Cargo.toml  tauri.conf.json
client/client-ministry/src-tauri/src/: activation.rs  client_error.rs  constants.rs  hospital.rs  lib.rs  main.rs  move_call.rs  types.rs  utils.rs
client/client-ministry/src/lib/: schema.ts  types.ts  utils.ts
client/client-ministry/src/lib/components/: dialog.svelte
client/client-ministry/src/routes/: +layout.svelte  +page.svelte  +page.ts  state.svelte.ts
client/client-patient-tauri/: package-lock.json  package.json
client/client-patient-tauri-v2/: eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
client/client-patient-tauri-v2/src/: app.css
client/client-patient-tauri-v2/src-tauri/: Cargo.toml  tauri.conf.json
client/client-patient-tauri-v2/src-tauri/capabilities/: default.json
client/client-patient-tauri-v2/src-tauri/src/: access.rs  constants.rs  home.rs  lib.rs  main.rs  move_call.rs  patient_error.rs  scan.rs  shared_cmds.rs  signin.rs  signout.rs  signup.rs  types.rs  utils.rs
client/client-patient-tauri-v2/src/lib/: constants.ts  schema.ts  types.ts  utils.ts
client/client-patient-tauri-v2/src/lib/components/: date-field.svelte  dialog.svelte  select.svelte
client/client-patient-tauri-v2/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
client/client-patient-tauri-v2/src/routes/(auth)/complete-profile/: +page.svelte  +page.ts
client/client-patient-tauri-v2/src/routes/dashboard/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
client/client-patient-tauri/src/: app.css  app.html
client/client-patient-tauri/src-tauri/: Cargo.toml  tauri.conf.json
client/client-patient-tauri/src-tauri/capabilities/: default.json
client/client-patient-tauri/src-tauri/src/: constant.rs  lib.rs  main.rs  types.rs
client/client-patient-tauri/src/routes/: +layout.svelte  +layout.ts  +page.ts
client/client-patient-tauri/src/routes/auth/: +layout.svelte
client/client-patient-tauri/src/routes/dashboard/: +page.svelte  +page.ts
ipfs-cluster-ctl/: docker-compose.yml
move/account/: Move.toml  output.txt
move/account/sources/: account.move
move/account/tests/: account_tests.move
move/decmed/: Move.toml  output.txt
move/decmed/sources/: admin.move  hospital_personnel.move  patient.move  proxy.move  shared.move
move/decmed/sources/std/enum/: hospital_personnel_access_data_type.move  hospital_personnel_access_type.move  hospital_personnel_role.move
move/decmed/sources/std/struct/: address_id.move  hospital.move  hospital_admin_metadata.move  hospital_id_metadata.move  hospital_metadata.move  hospital_personnel_access.move  hospital_personnel_access_data.move  hospital_personnel_account.move  hospital_personnel_administrative_metadata.move  hospital_personnel_id_account.move  hospital_personnel_metadata.move  patient_access_log.move  patient_account.move  patient_administrative_metadata.move  patient_id_account.move  patient_medical_metadata.move
move/decmed/tests/: decmed_tests.move  illegal_action_tests.move  shared.move
move/hospital/: Move.toml  output.txt  output.txtexit
move/hospital/sources/: hospital.move
move/hospital/tests/: hospital_tests.move
proxy-reencryption/: .env  Cargo.toml  Dockerfile  docker-compose.yaml  nginx.conf
proxy-reencryption/src/: constants.rs  handlers.rs  macros.rs  main.rs  middlewares.rs  move_call.rs  proxy_error.rs  tes_error.rs  types.rs  utils.rs
proxy-reencryption/test_http/: t_pro_01.hurl  t_pro_02.hurl  vars.env
sc/: hardhat.config.js  package-lock.json  package.json  pnpm-lock.yaml
sc/contracts/: Hospsital.sol  Token.sol
sc/ignition/deployments/chain-777/: deployed_addresses.json  journal.jsonl
sc/ignition/modules/: Hospital.js
(+33 files in other folders)
