[package]
name = "client-hospital-tauri"
version = "0.1.0"
description = "DecMed Hospital Client"
authors = ["harishu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_hospital_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3.6.2", features = ["windows-native"] }
alloy = { version = "0.15.6", features = ["full"] }
sha2 = "0.10.8"
uuid = { version = "1.16.0", features = ["v4"] }
bip39 = { version = "2.1.0", features = ["rand"] }
iota-sdk = "1.1.5"
ed25519-dalek = "2.1.1"
