[package]
name = "client-hospital-tauri"
version = "0.1.0"
description = "DecMed Hospital Client"
authors = ["harishu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_hospital_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["windows-native"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
bip39 = { version = "2", features = ["rand"] }
iota-sdk = { git = "https://github.com/iotaledger/iota", package = "iota-sdk" }
iota-keys = { git = "https://github.com/iotaledger/iota", package = "iota-keys" }
iota-config = { git = "https://github.com/iotaledger/iota", package = "iota-config" }
iota-types = { git = "https://github.com/iotaledger/iota", package = "iota-types" }
iota-json-rpc-types = { git = "https://github.com/iotaledger/iota", package = "iota-json-rpc-types" }
shared_crypto = { git = "https://github.com/iotaledger/iota", package = "shared-crypto" }
dotenv = "0.15"
bcs = "0.1.4"
reqwest = { version = "0.12", features = ["json"] }
